--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -10,6 +10,8 @@ bind "l" nadetoggleon
 alias "nadetoggleon" "cl_crosshairsize 1000; cl_crosshairdot 0; scl_crosshairgap -3; bind "," nadetoggleoff"
 alias "nadetoggleoff" "cl_crosshairalpha 250; cl_crosshairdot 1; cl_crosshairgap -4.5; cl_crosshairsize 0.5; cl_crosshairstyle 3; cl_crosshairthickness 1; cl_fixedcrosshairgap -11; cl_crosshair_drawoutline 1; bind "l" nadetoggleon"
 
+// for nadetoggleoff, change the settings to match your crosshair
+
 bind "b" "toggle gameinstructor_enable" 
 
 rate "786432" // max rate, lower if having network issues
